--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-numpy >= 1.12.1
-six >= 1.11.0
-git+https://github.com/thu-ml/zhusuan.git
-git+https://github.com/haowen-xu/tfsnippet.git@v0.1.2
+numpy
+six
+git+https://github.com.cnpmjs.org/thu-ml/zhusuan.git
+git+https://github.com.cnpmjs.org/haowen-xu/tfsnippet.git@v0.1.2
+git+https://github.com.cnpmjs.org/NetManAIOps/donut
+tensorflow==1.15.0
+pytest
+mock
+setuptools
