--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ numpy
 six
 git+https://github.com.cnpmjs.org/thu-ml/zhusuan.git
 git+https://github.com.cnpmjs.org/haowen-xu/tfsnippet.git@v0.1.2
-git+https://github.com.cnpmjs.org/NetManAIOps/donut
-tensorflow==1.15.0
+tensorflow
 pytest
 mock
 setuptools
+pandas
