--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 numpy
 six
-git+https://github.com.cnpmjs.org/thu-ml/zhusuan.git
-git+https://github.com.cnpmjs.org/haowen-xu/tfsnippet.git@v0.1.2
+git+https://github.com/thu-ml/zhusuan.git
+git+https://github.com/haowen-xu/tfsnippet.git@v0.1.2
+
+matplotlib
+streamlit
+donut
 tensorflow
 pytest
 mock
 setuptools
-pandas
-matplotlib
-streamlit
-donut
