--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 git+https://github.com.cnpmjs.org/thu-ml/zhusuan.git
 git+https://github.com.cnpmjs.org/haowen-xu/tfsnippet.git@v0.1.2
 git+https://github.com.cnpmjs.org/897615138/donut.git
-
+git+https://github.com.cnpmjs.org/897615138/tfsnippet
 numpy ~= 1.19.2
 six ~= 1.15.0
 matplotlib ~=  3.3.4
